[package]
name = "cargo-cala"
version = "0.0.1"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"
license = "MIT / BSL-1.0"
documentation = "https://libcala.github.io/tutorials"
repository = "https://github.com/libcala/cargo-cala"
readme = "README.md"
description = "A cargo plugin that makes cargo generate release packages instead of binaries."

[dependencies]
cargo = "0.45"
inotify = "0.8"
walrus = "0.17"
tide = "0.10"
num_cpus = "1.0"
async-std = "1.0"
whoami = "0.8"
