[package]
name = "cargo-cala"
version = "0.0.1"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"
license = "APACHE-2.0 OR MIT"
documentation = "https://libcala.github.io/tutorials"
repository = "https://github.com/libcala/cargo-cala"
readme = "README.md"
description = "Cargo plugin: Hot-Reload app debug and release to FlatPak/APK/Website/etc."

[dependencies]
notify = "4.0"
walrus = "0.17"
tide = "0.11"
async-std = "1.0"
whoami = "0.8"
muon-rs = "0.2"
devout = { path = "../devout" }
serde = "1.0"
serde_derive = "1.0"
