[package]
name = "gsp_demo"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeron.lau@plopgrizzly.tech>"]
homepage = "https://aldarons-tech.github.io/gsp_demo.html"
description = "_Demo:Packager-_Software-Graphical"
keywords = [ "gsp", "demo" ]
categories = [ "demo" ]

[[bin]]
name = "gsp_program"
path = "target/crate/main.rs"

[lib]
name = "gsp_program"
path = "target/crate/lib.rs"
crate_type = ["staticlib"]

[dependencies]
window = { path = "/home/aldaron/aldarons_tech/cargo-gsp/window" }
